Update to version 1.2.1:Updated keyword logic and polished

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "description": "Block specific content on webpages based on user-defined keywords.",
   "permissions": [
     "activeTab",
+    "tabs",
+    "activeTab",
     "storage"
   ],
   "background": {
